--- a/style/media.css
+++ b/style/media.css
@@ -51,6 +51,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+
                 .img-transition {
                     position: relative;
                     width: 100%;
@@ -79,41 +80,95 @@
             }
         }
     }
-    .button-more{
-        .button-more-container{
+
+    .button-more {
+        .button-more-container {
             margin-top: 5%;
         }
     }
-    .filosofia{
+
+    .filosofia {
         margin-top: 5%;
-        .filosofia-container{
+
+        .filosofia-container {
             display: flex;
             flex-direction: column;
-            .text-filo{
-                border-radius: 20% 20% 0 0 ;
-                align-items: center;
-                .title-filo{
 
-                }
+            .text-filo {
+                border-radius: 20% 20% 0 0;
+                align-items: center;
+
+                .title-filo {}
             }
-            .graphic-filo{
+
+            .graphic-filo {
                 border-radius: 0;
                 box-shadow: none;
-                .img-filo{
-                    background:var(--color-blue) ;
+
+                .img-filo {
+                    background: var(--color-blue);
                     border-radius: 20px;
-                    img{
+
+                    img {
                         width: 80%;
                     }
                 }
             }
         }
     }
+
+    .processo-criativo {
+        .container-criativo {
+            display: flex;
+            flex-direction: column;
+
+            .container-processo {
+                #number2 {
+                    margin-top: 0;
+                    height: 100%;
+                    .text-processo{
+                        strong{
+                            font-size: 15px;
+                        }
+                        p{
+                            font-size: 15px;
+                        }
+                    }
+                }
+
+                .container-number {
+                    width: 100%;
+
+                    strong {
+                        font-size: 15px;
+                    }
+                    p{
+                        font-size: 15px;
+                    }
+                }
+            }
+
+            #number1 {
+                justify-content: center;
+
+            }
+
+            #number3 {
+                justify-content: center;
+            }
+
+        }
+    }
 }
 
 @media(max-width:750px) {
+    #filosofia {
+        scroll-margin-top: 0px;
+    }
+
     .navbar {
         padding: 10px 0;
+
         .nav-container {
             .button-container {
                 display: none;
@@ -122,9 +177,10 @@
             .hamburger {
                 display: flex;
             }
-            .menu-mobile{
-                .button-menu{
-                    .button{
+
+            .menu-mobile {
+                .button-menu {
+                    .button {
                         margin-top: 10px;
                     }
                 }
@@ -177,20 +233,24 @@
     .inicio .inicio-container .img-container-inicio {
         margin: 20% 5% 0 5%;
     }
-    .button-more{
-        .button-more-container{
+
+    .button-more {
+        .button-more-container {
             margin-top: 25%;
         }
     }
-    .filosofia{
-        .filosofia-container{
-            .text-filo{
+
+    .filosofia {
+        .filosofia-container {
+            .text-filo {
                 border-radius: 1% 1% 0 0;
                 padding: 0;
-                h1{
+
+                h1 {
                     margin-top: 20px;
                 }
-                p{
+
+                p {
                     margin-bottom: 20px;
                 }
             }
