--- a/style/geral.css
+++ b/style/geral.css
@@ -212,13 +212,13 @@ body::-webkit-scrollbar-thumb {
                 #contato-inicio {
                     margin: 0 0 0 5px;
                     border: 2px solid var(--color-green);
-                    color: var(--color-green);
+                    color: var(--color-black);
                     transition: 0.5s;
                 }
 
                 #contato-inicio:hover {
                     background: var(--color-green);
-                    color: var(--color-white);
+                    color: var(--color-black);
                     transform: scale(1.1);
                     box-shadow: 0 5px 20px var(--color-green);
                 }
@@ -482,7 +482,9 @@ body::-webkit-scrollbar-thumb {
     color: var(--very-light-blue);
     /* Cor do ícone ao passar o mouse */
 }
-
+#processo{
+    scroll-margin-top: 120px;
+}
 .processo-criativo {
     margin: 10% 0 0 0;
     padding: 5px;
@@ -571,6 +573,99 @@ body::-webkit-scrollbar-thumb {
             }
             .container-number:hover{
                 box-shadow: 0 0 30px var(--dark-blue);
+            }
+        }
+    }
+}
+
+.planos{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 15% 0 0 0;
+    .title-plano-container{
+        margin: 0 0 50px 0;
+        border-bottom: 2px solid var(--dark-blue);
+        width: 50%;
+        text-align: center;
+    }
+    .planos-container{
+        display: grid;
+        grid-template-columns: 25% 25% 25% 25%;
+        width: 90%;
+        .plano-content{
+            border-radius: 2%;
+            border: 3px solid var(--dark-blue);
+            margin: 5%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background: var(--very-light-blue);
+            transition: 0.5s;
+            .title-plano{
+                margin: 5% 0 5% 0;
+                width: 90%;
+                display: flex;
+                justify-content: center;
+                border-bottom: 2px solid var(--dark-blue);
+            }
+            .text-plano{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                .button-plano{
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+                    margin: 0 0 5% 0;
+                    a{
+                        width: 60%;
+                        border: none;
+                        background: transparent;
+                        color: transparent;
+                        transition: 0.5s;
+                        text-align: center;
+                        padding: 5px;
+                        font-size: 20px;
+                        font-weight: bolder;
+                    }
+                }
+            }
+            ul{
+                list-style: none;
+                padding: 0;
+                li{
+                    text-align: justify;
+                    margin: 5px 5% 5% 5%;
+                    .text-plano-content{
+                        display: flex;
+                        i{
+                            margin:  0 5px 0 0;
+                            color: var(--color-blue);
+                        }
+                    }
+                }
+            }
+        }
+        .plano-content:hover{
+            box-shadow: 0 5px 20px var(--dark-blue);
+            transform: scale(1.05);
+            .text-plano{
+                .button-plano{
+                    a{
+                        color: var(--color-blue);
+                        border: 2px solid var(--color-blue);
+                        
+                        border-radius: 5px;
+                    }
+                    a:hover{
+                        transform: scale(1.1);
+                        border: none;
+                        background: var(--dark-blue);
+                        color: var(--very-light-blue);
+                        box-shadow: 0 5px 20px var(--dark-blue);
+                    }
+                }
             }
         }
     }
